--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+
+@layer utilities {
+    .container {
+        @apply mx-auto px-4 sm:px-6 lg:px-8;
+    }
+}
